<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/popmenulay"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <Button
        android:id="@+id/editbut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:gravity="center"
        android:text="@string/edit"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_large" />

    <Button
        android:id="@+id/deletebut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:gravity="center"
        android:text="@string/delete"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_large" />

    <Button
        android:id="@+id/sendviobut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:gravity="center"
        android:text="@string/sendvio"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_large" />

</LinearLayout>