<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f2f2f2"
    tools:context="${relativePackage}.${activityClass}">

    <TextView
        android:id="@+id/contactustv"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="25dp"
        android:text="@string/sendvio"
        android:textColor="@color/cat_item_name"
        android:textSize="@dimen/text_size_large" />

    <TextView
        android:id="@+id/desctv"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/contactustv"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/contactusdesc1"
        android:textColor="#afafaf"
        android:textSize="@dimen/text_size_small" />


    <EditText
        android:id="@+id/messagecontentet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/desctv"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="10dp"
        android:gravity="right"
        android:hint="@string/messagecontent"
        android:lines="10"
        android:textColor="#afafaf"
        android:textSize="@dimen/text_size_small" />

    <Button
        android:id="@+id/publishmessagebut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/messagecontentet"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:background="@drawable/button"
        android:text="@string/send"
        android:textColor="#ffffff" />

</RelativeLayout>