<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:orientation="vertical">


    <com.optimalsolutions.fadfed.utils.CircularNetworkImageView
        android:id="@+id/userimg"
        android:layout_width="@dimen/user_profile_pic"
        android:layout_height="@dimen/user_profile_pic"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="2dp"
        android:layout_marginTop="5dp"
        android:clickable="false"
        android:scaleType="fitCenter"
        android:src="@drawable/user_image_undefind" />


    <TextView
        android:id="@+id/sendmessagebut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/userloginbut"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:background="@null"
        android:clickable="true"
        android:text="@string/sendmessage"
        android:textColor="#59c1b2"
        android:textSize="@dimen/text_size_large"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/usernametv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/userimg"
        android:layout_centerHorizontal="true"
        android:textColor="@color/user_name_color"
        android:textSize="@dimen/text_size_large" />



    <LinearLayout
        android:id="@+id/userinfolay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/usernametv"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/useragetv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_toLeftOf="@+id/showuseragetv"
                android:textColor="@color/user_name_color"
                android:textSize="@dimen/text_size_small" />

            <TextView
                android:id="@+id/showuseragetv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dateofbirth"
                android:textColor="@color/user_name_color"
                android:textSize="@dimen/text_size_small"
                android:visibility="invisible" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/usersextv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:textColor="@color/user_name_color"
                android:textSize="@dimen/text_size_small" />

            <TextView
                android:id="@+id/showusergendertv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sex"
                android:textColor="@color/user_name_color"
                android:textSize="@dimen/text_size_small"
                android:visibility="invisible" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/usercountrytv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:textColor="@color/user_name_color"
                android:textSize="@dimen/text_size_small" />

            <TextView
                android:id="@+id/showusercountrytv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/country"
                android:textColor="@color/user_name_color"
                android:textSize="@dimen/text_size_small"
                android:visibility="invisible" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/userinfolay"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginRight="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/noofposts"
                android:textColor="@color/user_name_color"
                android:textSize="@dimen/text_size_small" />

            <TextView
                android:id="@+id/noofposttv"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center_horizontal"
                android:textColor="@color/user_name_color"
                android:textSize="@dimen/text_size_small" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/noofollowers"
                android:textColor="@color/user_name_color"
                android:textSize="@dimen/text_size_small" />

            <TextView
                android:id="@+id/nooffollowertv"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center_horizontal"
                android:textColor="@color/user_name_color"
                android:textSize="@dimen/text_size_small" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:background="@drawable/button"
            android:id="@+id/blockuserbut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="@string/block"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/followuserbut"
            android:background="@drawable/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/follow"
            android:textColor="@color/white" />
    </LinearLayout>


</RelativeLayout>